--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "ramyadeep",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
